# bonk_bot

./: README.md  example_bot.py  main.py  pyproject.toml  requirements.txt  setup.py  xd.py
bonkBot/: BonkBot.py  BonkMap.py  BonkMaps.py  FriendList.py  Game.py  GameTypes.py  Parsers.py  Room.py  Settings.py  Types.py  dbids.json
bonk_bot/: Avatar.py  BonkBot.py  BonkMaps.py  FriendList.py  Game.py  Parsers.py  Room.py  Settings.py  Types.py  __init__.py  avatar.py  bonk_maps.py  bonk_online.py  dbids.json  friend_list.py  game.py  room.py  settings.py
bonk_bot.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
bonk_bot/bot/: __init__.py  bonk_bot.py  bot_event_handler.py
bonk_bot/parsers/: __init__.py  byte_buffer.py  parsers.py
bonk_bot/types/: __init__.py  game_inputs.py  modes.py  servers.py  teams.py
